--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.2.2",
     "pinia": "^2.0.28",
+    "vant": "^4.0.7",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
