--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@vant/touch-emulator": "^1.4.0",
     "axios": "^1.2.2",
+    "dayjs": "^1.11.7",
     "pinia": "^2.0.28",
     "vant": "^4.0.7",
     "vue": "^3.2.45",
@@ -31,6 +32,7 @@
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
