--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.7",
     "echarts": "^5.4.1",
     "pinia": "^2.0.28",
+    "throttle-debounce": "^5.0.0",
     "vant": "^4.0.7",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
@@ -27,6 +28,7 @@
     "@faker-js/faker": "^7.6.0",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^18.11.12",
+    "@types/throttle-debounce": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
