--- a/tsconfig.config.json
+++ b/tsconfig.config.json
@@ -8,6 +8,8 @@
   ],
   "compilerOptions": {
     "composite": true,
-    "types": ["node"]
+    "types": ["node"],
+    "jsx": "preserve",
+    "jsxImportSource": "@antv/f2"
   }
 }
