--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@antv/f2": "^4.0.41",
+    "@antv/f2-vue": "^4.0.22",
     "@types/echarts": "^4.9.16",
     "@vant/touch-emulator": "^1.4.0",
     "axios": "^1.2.2",
@@ -25,7 +27,9 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.20.13",
     "@faker-js/faker": "^7.6.0",
+    "@rollup/plugin-babel": "^6.0.3",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^18.11.12",
     "@types/throttle-debounce": "^5.0.0",
