--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     },
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "target": "ES6",
-    "strict": true
+    "strict": true,
+    "allowJs": true,
+    "jsx": "react-jsx"
   },
   "references": [
     {
