--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "echarts": "^5.4.1",
     "pinia": "^2.0.28",
     "throttle-debounce": "^5.0.0",
+    "ts-node": "^10.9.1",
     "vant": "^4.0.7",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
@@ -44,6 +45,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
+    "postcss-px-to-viewport": "^1.1.1",
+    "postcss-px-to-viewport-8-plugin": "^1.2.0",
     "prettier": "^2.7.1",
     "sass": "^1.57.1",
     "typescript": "~4.7.4",
