--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
     "echarts": "^5.4.1",
+    "js-cookie": "^3.0.1",
     "pinia": "^2.0.28",
     "throttle-debounce": "^5.0.0",
     "ts-node": "^10.9.1",
@@ -32,7 +33,8 @@
     "@faker-js/faker": "^7.6.0",
     "@rollup/plugin-babel": "^6.0.3",
     "@rushstack/eslint-patch": "^1.1.4",
-    "@types/node": "^18.11.12",
+    "@types/js-cookie": "^3.0.3",
+    "@types/node": "^18.15.0",
     "@types/throttle-debounce": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
@@ -50,7 +52,7 @@
     "prettier": "^2.7.1",
     "sass": "^1.57.1",
     "typescript": "~4.7.4",
-    "vite": "^4.0.0",
+    "vite": "^4.1.4",
     "vue-tsc": "^1.0.12"
   }
 }
