--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "echarts": "^5.4.1",
     "js-cookie": "^3.0.1",
     "pinia": "^2.0.28",
+    "radash": "^10.7.1",
     "throttle-debounce": "^5.0.0",
     "ts-node": "^10.9.1",
     "vant": "^4.0.7",
