--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "prettier": "^2.7.1",
     "sass": "^1.57.1",
     "typescript": "~4.7.4",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
     "vue-tsc": "^1.0.12"
   }
