--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write ."
+    "format": "prettier --write src/",
+    "prepare": "husky install",
+    "postinstall": "husky install"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "dependencies": {
     "@types/echarts": "^4.9.16",
@@ -28,6 +35,8 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.20.13",
+    "@commitlint/cli": "^17.5.1",
+    "@commitlint/config-conventional": "^17.4.4",
     "@faker-js/faker": "^7.6.0",
     "@rollup/plugin-babel": "^6.0.3",
     "@rushstack/eslint-patch": "^1.1.4",
@@ -43,6 +52,7 @@
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "express": "^4.18.2",
+    "husky": "^8.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
