--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "strict": true,
     "allowJs": true,
     "jsx": "react-jsx",
+    "esModuleInterop": true,
     "jsxImportSource": "@antv/f2"
   },
   "references": [
