--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/plugin-transform-react-jsx": "^7.20.13",
     "@commitlint/cli": "^17.5.1",
     "@commitlint/config-conventional": "^17.4.4",
+    "@commitlint/prompt-cli": "^17.5.0",
     "@faker-js/faker": "^7.6.0",
     "@rollup/plugin-babel": "^6.0.3",
     "@rushstack/eslint-patch": "^1.1.4",
