--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
+  "lint-staged": {
+    "*.{vue,js,jsx,ts,tsx,json}": [
+      "eslint --fix",
+      "prettier --write src/"
+    ]
+  },
   "dependencies": {
     "@types/echarts": "^4.9.16",
     "@vant/touch-emulator": "^1.4.0",
@@ -53,6 +59,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "express": "^4.18.2",
     "husky": "^8.0.0",
+    "lint-staged": "^13.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
