--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "lint-staged": {
     "*.{vue,js,jsx,ts,tsx}": [
       "npm run lint",
-      "npm run format",
-      "git add"
+      "npm run format"
     ]
   },
   "dependencies": {
